feat(dashscope):Support wan2.6-image api (#131)